--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
-  <title>Daftar API Lokal Indonesia</title>
+  <title>LOG CATATAN</title>
   <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
   <div id="app">Loading...</div>
   <script>
     window.$docsify = {
-      name: 'Daftar API Lokal Indonesia',
-      repo: 'farizdotid/DAFTAR-API-LOKAL-INDONESIA',
+      name: 'Muhamad Hashbi Ashiddiq',
+      repo: 'MuhamadHashbiAshiddiq/blog-catatan',
       search: ['/'],
       relativePath: true,
     }
